BRIG-46 - FED fix for grid alignments

--- a/fed/css/pagelibs.css
+++ b/fed/css/pagelibs.css
@@ -2896,6 +2896,10 @@ nav ul li {
   position: relative;
   z-index: 1; }
 
+@media (min-width: 768px) {
+  .sync-boxes .box {
+    height: calc(100% - 30px); } }
+
 .clearfix::after {
   display: block;
   content: "";
