--- a/fed/styles/global/global.scss
+++ b/fed/styles/global/global.scss
@@ -115,6 +115,16 @@ nav {
 	z-index: 1;
 }
 
+@include media-breakpoint-up(md) {
+
+	.sync-boxes {
+
+		.box {
+			height: calc(100% - 30px);
+		}
+	}
+}
+
 .clearfix {
 	&::after {
 		display: block;
